# ChangeLog for dev-python/notebook
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Id$

*notebook-4.0.5 (22 Sep 2015)

  22 Sep 2015; Marius Brehler <marbre@linux.sungazer.de> +notebook-4.0.5.ebuild:
  dev-python/notebook: Version bump

  22 Sep 2015; Marius Brehler <marbre@linux.sungazer.de>
  notebook-4.0.4-r3.ebuild, notebook-9999.ebuild:
  dev-python/notebook: Add ~x86 to KEYWORDS, fixes #561032

*notebook-4.0.4-r3 (17 Sep 2015)

  17 Sep 2015; Marius Brehler <marbre@linux.sungazer.de>
  +files/notebook-4.0.4-Don-t-redirect-from-edit-to-files.patch,
  +files/notebook-4.0.4-only-redirect-to-editor-for-text-documents.patch,
  +files/notebook-4.0.4-set-mime-type-on-files.patch,
  +files/notebook-4.0.4-set-model-mimetype-even-when-content-False.patch,
  +notebook-4.0.4-r3.ebuild, -notebook-4.0.4-r2.ebuild, notebook-9999.ebuild:
  dev-python/notebook: Security fixes  http://seclists.org/oss-sec/2015/q3/558
  https://bugs.gentoo.org/show_bug.cgi?id=560708

  07 Sep 2015; Marius Brehler <marbre@linux.sungazer.de> notebook-9999.ebuild:
  dev-python/notebook: Fix deps, >=mathjax-2.4 required

  05 Sep 2015; Marius Brehler <marbre@linux.sungazer.de> notebook-9999.ebuild:
  dev-python/notebook: Add deps for doc, fixes bug #559594

*notebook-4.0.4-r2 (05 Sep 2015)

  05 Sep 2015; Marius Brehler <marbre@linux.sungazer.de>
  +notebook-4.0.4-r2.ebuild, -notebook-4.0.4-r1.ebuild, notebook-9999.ebuild:
  dev-python/notebook: pandoc required for use doc, partially fixes bug #559594

  02 Sep 2015; Sean Vig <sean.v.775@gmail.com> notebook-9999.ebuild:
  dev-python/notebook: Enable building docs

  03 Sep 2015; Marius Brehler <marbre@linux.sungazer.de> notebook-9999.ebuild:
  dev-python/notebook: Re-Fix #478

*notebook-4.0.4-r1 (03 Sep 2015)

  03 Sep 2015; Marius Brehler <marbre@linux.sungazer.de>
  +notebook-4.0.4-r1.ebuild, -notebook-4.0.4.ebuild, notebook-9999.ebuild:
  dev-python/notebook: Implement pkg_preinst(); Fixes #478
