@@ -35,6 +35,7 @@ DEPEND="${RDEPEND}
 		>=dev-python/nose-0.10.1[${PYTHON_USEDEP}]
 		dev-python/requests[${PYTHON_USEDEP}]
 		dev-python/coverage[${PYTHON_USEDEP}]
+		www-client/casperjs
 	)
 	doc? (
 		app-text/pandoc
@@ -66,6 +67,11 @@ python_compile_all() {
 
 python_test() {
 	nosetests --with-coverage --cover-package=notebook notebook || die
+
+	"${PYTHON}" -m notebook.jstest base || die
+	"${PYTHON}" -m notebook.jstest notebook || die
+	"${PYTHON}" -m notebook.jstest services || die
+	"${PYTHON}" -m notebook.jstest tree || die
 }
 
 python_install() {
