@@ -2,6 +2,10 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+  03 Sep 2015; Sean Vig <sean.v.775@gmail.com> notebook-4.0.5.ebuild,
+  notebook-9999.ebuild:
+  dev-python/notebook: Add javascript tests
+
 *notebook-4.0.5 (22 Sep 2015)
 
   22 Sep 2015; Marius Brehler <marbre@linux.sungazer.de> +notebook-4.0.5.ebuild:
